Got sidebar to display correctly on about and gallery pages. Made horizontal overflow hidden.

--- a/orla_curran_design/src/pages/AboutPage/AboutPage.scss
+++ b/orla_curran_design/src/pages/AboutPage/AboutPage.scss
@@ -1,7 +1,3 @@
-body {
-  overflow: hidden;
-}
-
 .aboutContainer {
   display: flex;
 }
